--- a/src/WebApps/AdminApp/Pages/Personal/Dashboard.razor
+++ b/src/WebApps/AdminApp/Pages/Personal/Dashboard.razor
@@ -19,7 +19,7 @@
             <div>
                 <MudText Typo="Typo.subtitle1" Class="mud-text-secondary mb-n1">Graphite on roof</MudText>
                 <MudText Typo="Typo.h5">150,000</MudText>
-            </div>
+            </div>s
         </MudPaper>
     </MudItem>
     <MudItem xs="12" sm="6" md="3">
